Update example custom.css showing how to prevent code wrapping.

--- a/example/css/custom.css
+++ b/example/css/custom.css
@@ -3,3 +3,11 @@
 code {
     color: black;
 }
+
+/* When highlighted code blocks are too wide, they wrap. Resulting in the */
+/* line numbers column's rows not lining up with the code rows. Prevent */
+/* wrapping. */
+pre {
+    white-space: pre;
+    width: inherit;
+}
